# PhysicsBasedAnimatoin

./: .gitignore  CollisionResponse.ipynb  InverseKinematics.py  Jacobian.py  README.md  Rotations.py  Transformations.py  test.py
IK/: InverseKinematics.py  Jacobian.py
Presentations/: Session10-ContactDetection.key  Session14-ContactFrictionCourse1.key  Session2-Kinematics.key  Session6-ImpulsePart2.key  Session7-MultipleContacts.pptx
Scripts/: test.py
Transformations/: Rotations.py  Transformations.py
cpp/: CMakeLists.txt  README.md  cmake_reference.txt
cpp/apps/: CMakeLists.txt  app.cpp
cpp/include/collision_detection/: impulse_based.h
cpp/include/geometry/: rigid_body.h
cpp/src/: CMakeLists.txt  collision_detection.cpp  geometry.cpp
python_physics/: LCPsolvers.py  intersectData.py  main.py  physicsObject.py  scene.py
